# mandelbrust

./: Cargo.toml
mandelbrot-rs/: .gitignore  Cargo.toml  README.md  config.yaml
mandelbrot-rs/src/: config.rs  lib.rs  main.rs  mandelbrot.rs  opts.rs  palette.rs
mandelbrust/: Cargo.toml
mandelbrust-cli/: Cargo.toml  README.md
mandelbrust-cli/src/: config.rs  lib.rs  main.rs  mandelbrot.rs  opts.rs  palette.rs
mandelbrust-gif/: Cargo.toml
mandelbrust-gif/src/: main.rs
mandelbrust/src/: lib.rs  main.rs  mouse_area.rs
mandelbust/: Cargo.toml
mandelbust-cli/: Cargo.toml
mandelbust-cli/src/: main.rs  mandelbrot.rs  opts.rs
mandelbust-gif/: Cargo.toml
mandelbust-gif/src/: main.rs
mandelbust/src/: main.rs
