[package]
name = "mandelbruhst-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandelbruhst-cli = {path = "../mandelbruhst-cli/"}
iced = {version="0.9.0", features=[ "image", "canvas" ]}
iced_native = "0.10.3"
image = "0.24.6"
anyhow = "1.0.69"
