[package]
name = "mandelbrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandelbrust-cli = {path = "../mandelbrust-cli/"}
image = "0.24.6"
anyhow = "1.0.69"
eframe = { version = "0.22.0", features = ["wayland"] }
confy = {version = "0.5.1", features = ["ron_conf"], default_features = false}
