[package]
name = "mandelbust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandelbust-cli = { path = "../mandelbust-cli/" }
eframe = { version = "0.22.0", features = ["wayland"] }
anyhow.workspace = true
image.workspace = true
confy.workspace = true
